--- a/1-analyses/ablations/ablation.Rmd
+++ b/1-analyses/ablations/ablation.Rmd
@@ -120,7 +120,7 @@ ggsave("3-plots/recoil-stage-position.svg", width = 14, height = 7)
 ## Calculate means and distance classes
 
 ```{r means}
-# Mean of CF length per embryo
+# Mean of recoil velocity per embryo/cut
 embryo_mean <- aggregate(ablations$Velocity, list(ablations$Embryo), mean)
 colnames(embryo_mean) <- c("Embryo", "Velocity")
 
@@ -178,8 +178,8 @@ print(dists)
 ```{r means-stage-classes}
 ggplot(means, aes(Distance, Velocity, group = Distance, fill = Position)) +
   geom_boxplot(aes(color = Position), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.8, position = position_dodge(width = 1.0)) +
-  geom_point(alpha = 0.8, size = 5, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 5)) +
-  scale_y_continuous(limits = c(0, 0.21)) +
+  geom_point(alpha = 0.8, size = 5, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 4)) +
+  scale_y_continuous(limits = c(-0.008, 0.25)) +
   facet_wrap(~Stage) +
   labs(x = "stage", y = "velocity (µm/s)") +
   scale_fill_manual(values=c("#009966", "#cc79a7")) +
