Replace GitHub's repository citation for Zenodo

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1770,6 +1770,46 @@
   pmc      = "PMC5021607"
 }
 
+@MISC{Vellutini2023-ng,
+  title     = "Repository for: Pre-patterned epithelial invagination prevents
+               mechanical instability during fly gastrulation",
+  author    = "Vellutini, Bruno C",
+  abstract  = "This repository contains the data, scripts, and analyses for the
+               manuscript: Vellutini BC, Cuenca MB, Krishna A, Szałapak A,
+               Modes CD, Tomančák P. Pre-patterned epithelial invagination
+               prevents mechanical instability during fly gastrulation. (in
+               prep)",
+  publisher = "Zenodo",
+  month     =  mar,
+  year      =  2023,
+  url       = "https://zenodo.org/record/7781948",
+  note      = "Title of the publication associated with this dataset:
+               Pre-patterned epithelial invagination prevents mechanical
+               instability during fly gastrulation",
+  keywords  = "Datasets;Cephalic furrow mechanics",
+  doi       = "10.5281/zenodo.7781948"
+}
+
+@MISC{Vellutini2023-hu,
+  title     = "Figures and videos for: Pre-patterned epithelial invagination
+               prevents mechanical instability during fly gastrulation",
+  author    = "Vellutini, Bruno C",
+  abstract  = "This repository contains the high-resolution figures and videos
+               for the manuscript: Vellutini BC, Cuenca MB, Krishna A, Szałapak
+               A, Modes CD, Tomančák P. Pre-patterned epithelial invagination
+               prevents mechanical instability during fly gastrulation. (in
+               prep)",
+  publisher = "Zenodo",
+  month     =  mar,
+  year      =  2023,
+  url       = "https://zenodo.org/record/7781917",
+  note      = "Title of the publication associated with this dataset:
+               Pre-patterned epithelial invagination prevents mechanical
+               instability during fly gastrulation",
+  keywords  = "Datasets;Cephalic furrow mechanics",
+  doi       = "10.5281/zenodo.7781917"
+}
+
 @UNPUBLISHED{Stern2021-zv,
   title    = "Deconstructing Gastrulation at the Single Cell Level",
   author   = "Stern, Tomer and Streichan, Sebastian J and Shvartsman, Stanislav
