Fix several small issues in references

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1,9 +1,10 @@
 @BOOK{Campos-Ortega1985-ma,
-  title     = "The Embryonic Development of \textit{{D}rosophila melanogaster}:",
+  title     = "The Embryonic Development of \textit{{D}rosophila
+               {m}elanogaster}",
   author    = "Campos-Ortega, José A and Hartenstein, Volker",
   publisher = "Springer Berlin Heidelberg",
   year      =  1985,
-  url       = "http://dx.doi.org/10.1007/978-3-662-02454-6",
+  url       = "https://link.springer.com/book/10.1007/978-3-662-02454-6",
   keywords  = "Cephalic furrow mechanics",
   isbn      = "9783662024560, 9783662024546",
   doi       = "10.1007/978-3-662-02454-6"
@@ -287,10 +288,11 @@
   booktitle = "The development of \textit{{D}rosophila melanogaster}",
   author    = "Costa, Michael and Sweeton, Dari and Wieschaus, Eric",
   editor    = "Bate, Michael and Arias, Alfonso Martinez",
-  publisher = "Cold Spring Harbor Laboratory Press, Cold Spring Harbor, NY",
+  publisher = "Cold Spring Harbor Laboratory Press",
   volume    =  1,
   pages     = "425--465",
   year      =  1993,
+  address   = "Cold Spring Harbor, NY",
   keywords  = "Cephalic furrow mechanics"
 }
 
@@ -785,44 +787,6 @@
   pmc      = "PMC2753456"
 }
 
-@ARTICLE{Gramates2022-xe,
-  title     = "Fly Base: a guided tour of highlighted features",
-  author    = "Gramates, L Sian and Agapite, Julie and Attrill, Helen and
-               Calvi, Brian R and Crosby, Madeline A and Dos Santos, Gilberto
-               and Goodman, Joshua L and Goutte-Gattat, Damien and Jenkins,
-               Victoria K and Kaufman, Thomas and Larkin, Aoife and Matthews,
-               Beverley B and Millburn, Gillian and Strelets, Victor B and {the
-               FlyBase Consortium}",
-  abstract  = "FlyBase provides a centralized resource for the genetic and
-               genomic data of Drosophila melanogaster. As FlyBase enters our
-               fourth decade of service to the research community, we reflect
-               on our unique aspects and look forward to our continued
-               collaboration with the larger research and model organism
-               communities. In this study, we emphasize the dedicated reports
-               and tools we have constructed to meet the specialized needs of
-               fly researchers but also to facilitate use by other research
-               communities. We also highlight ways that we support the fly
-               community, including an external resources page, help resources,
-               and multiple avenues by which researchers can interact with
-               FlyBase.",
-  journal   = "Genetics",
-  publisher = "Oxford University Press (OUP)",
-  volume    =  220,
-  number    =  4,
-  pages     = "iyac035",
-  month     =  apr,
-  year      =  2022,
-  url       = "https://academic.oup.com/genetics/article-pdf/220/4/iyac035/43709097/iyac035.pdf",
-  keywords  = "Drosophila ; FlyBase; model organism database;Cephalic furrow
-               mechanics",
-  copyright = "https://creativecommons.org/licenses/by/4.0/",
-  language  = "en",
-  issn      = "0016-6731, 1943-2631",
-  pmid      = "35266522",
-  doi       = "10.1093/genetics/iyac035",
-  pmc       = "PMC8982030"
-}
-
 @ARTICLE{Schmid2019-bm,
   title    = "3Dscript: animating {3D/4D} microscopy data using a
               natural-language-based syntax",
@@ -830,7 +794,10 @@
               Christina and Ruder, Barbara and Grüneboom, Anika and Huisken,
               Jan and Palmisano, Ralf",
   journal  = "Nat. Methods",
-  month    =  mar,
+  volume   =  16,
+  number   =  4,
+  pages    = "278--280",
+  month    =  apr,
   year     =  2019,
   url      = "http://dx.doi.org/10.1038/s41592-019-0359-1",
   keywords = "Cephalic furrow mechanics",
@@ -984,7 +951,7 @@
 }
 
 @ARTICLE{Berg2019-ab,
-  title    = "ilastik: interactive machine learning for (bio)image analysis",
+  title    = "{i}lastik: interactive machine learning for (bio)image analysis",
   author   = "Berg, Stuart and Kutra, Dominik and Kroeger, Thorben and
               Straehle, Christoph N and Kausler, Bernhard X and Haubold,
               Carsten and Schiegg, Martin and Ales, Janez and Beier, Thorsten
@@ -1160,7 +1127,10 @@
               mechanism to ensure morphogenetic precision despite noisy
               decoding of positional information.",
   journal  = "Dev. Cell",
-  month    =  mar,
+  volume   =  53,
+  number   =  2,
+  pages    = "212--228.e12",
+  month    =  apr,
   year     =  2020,
   url      = "http://dx.doi.org/10.1016/j.devcel.2020.02.012",
   keywords = "3D vertex modeling; cephalic furrow; differential interface
@@ -1370,8 +1340,8 @@
               and geometry act as sources of morphogenetic information to
               ultimately define the time and length scales of the cell
               behaviours driving morphogenesis. Next, we present two idealized
-              modes of how this information flows — how it is read out and
-              translated into a biological effect — during morphogenesis. The
+              modes of how this information flows - how it is read out and
+              translated into a biological effect - during morphogenesis. The
               first, akin to a programme, follows deterministic rules and is
               hierarchical. The second follows the principles of
               self-organization, which rests on statistical rules
@@ -1388,13 +1358,19 @@
               considerably from the traditional notion that shape is fully
               encoded and determined by genes.",
   journal  = "Nat. Rev. Mol. Cell Biol.",
-  month    =  jan,
+  volume   =  22,
+  number   =  4,
+  pages    = "245--265",
+  month    =  apr,
   year     =  2021,
-  url      = "https://doi.org/10.1038/s41580-020-00318-6",
+  url      = "http://dx.doi.org/10.1038/s41580-020-00318-6",
   keywords = "important;Cephalic furrow
               mechanics;Mechano-development;Epithelial folding",
+  language = "en",
   issn     = "1471-0072, 1471-0080",
-  doi      = "10.1038/s41580-020-00318-6"
+  pmid     = "33483696",
+  doi      = "10.1038/s41580-020-00318-6",
+  pmc      = "2464568"
 }
 
 @ARTICLE{Edgar1989-hv,
@@ -1810,39 +1786,6 @@
   doi       = "10.5281/zenodo.7781917"
 }
 
-@UNPUBLISHED{Stern2021-zv,
-  title    = "Deconstructing Gastrulation at the Single Cell Level",
-  author   = "Stern, Tomer and Streichan, Sebastian J and Shvartsman, Stanislav
-              Y and Wieschaus, Eric F",
-  abstract = "Gastrulation movements in all animal embryos start with regulated
-              deformations of patterned epithelial sheets. Current studies of
-              gastrulation use a wide range of model organisms and emphasize
-              either large-scale tissue processes or dynamics of individual
-              cells and cell groups
-              [1][1],[2][2],[11][3]–[13][4],[3][5]–[10][6]. Here we take a step
-              towards bridging these complementary strategies and deconstruct
-              early stages of gastrulation in the entire Drosophila embryo,
-              where transcriptional patterns in the blastoderm give rise to
-              region-specific cell behaviors. Our approach relies on an
-              integrated computational framework for cell segmentation and
-              tracking and on efficient algorithms for event detection. Our
-              results reveal how thousands of cell shape changes, divisions,
-              and intercalations drive large-scale deformations of the
-              patterned blastoderm, setting the stage for systems-level
-              dissection of a pivotal step in animal development. \#\#\#
-              Competing Interest Statement The authors have declared no
-              competing interest. [1]: \#ref-1 [2]: \#ref-2 [3]: \#ref-11 [4]:
-              \#ref-13 [5]: \#ref-3 [6]: \#ref-10",
-  journal  = "bioRxiv",
-  pages    = "2021.09.16.460711",
-  month    =  sep,
-  year     =  2021,
-  url      = "https://www.biorxiv.org/content/10.1101/2021.09.16.460711v1?rss=1&utm_source=dlvr.it&utm_medium=twitter",
-  keywords = "Cephalic furrow mechanics",
-  language = "en",
-  doi      = "10.1101/2021.09.16.460711"
-}
-
 @ARTICLE{Legland2016-cp,
   title    = "{MorphoLibJ}: integrated library and plugins for mathematical
               morphology with {ImageJ}",
@@ -2065,7 +2008,7 @@
   url       = "https://zenodo.org/record/7628300",
   keywords  = "tutorial; imsane; imagej; matlab; ilastik;
                fiji;Datasets;Cephalic furrow mechanics",
-  doi       = "10.5281/ZENODO.7628300"
+  doi       = "10.5281/zenodo.7628300"
 }
 
 @INCOLLECTION{Arganda-Carreras2006-im,
@@ -2189,4 +2132,75 @@
   url         = "https://github.com/HandBrake/HandBrake",
   keywords    = "Cephalic furrow mechanics",
   language    = "en"
+}
+
+@UNPUBLISHED{Stern2021-zv,
+  title    = "Deconstructing Gastrulation at the Single Cell Level",
+  author   = "Stern, Tomer and Streichan, Sebastian J and Shvartsman, Stanislav
+              Y and Wieschaus, Eric F",
+  abstract = "Gastrulation movements in all animal embryos start with regulated
+              deformations of patterned epithelial sheets. Current studies of
+              gastrulation use a wide range of model organisms and emphasize
+              either large-scale tissue processes or dynamics of individual
+              cells and cell groups
+              [1][1],[2][2],[11][3]–[13][4],[3][5]–[10][6]. Here we take a step
+              towards bridging these complementary strategies and deconstruct
+              early stages of gastrulation in the entire Drosophila embryo,
+              where transcriptional patterns in the blastoderm give rise to
+              region-specific cell behaviors. Our approach relies on an
+              integrated computational framework for cell segmentation and
+              tracking and on efficient algorithms for event detection. Our
+              results reveal how thousands of cell shape changes, divisions,
+              and intercalations drive large-scale deformations of the
+              patterned blastoderm, setting the stage for systems-level
+              dissection of a pivotal step in animal development. \#\#\#
+              Competing Interest Statement The authors have declared no
+              competing interest. [1]: \#ref-1 [2]: \#ref-2 [3]: \#ref-11 [4]:
+              \#ref-13 [5]: \#ref-3 [6]: \#ref-10",
+  journal  = "bioRxiv",
+  pages    = "2021.09.16.460711",
+  month    =  sep,
+  year     =  2021,
+  url      = "https://www.biorxiv.org/content/10.1101/2021.09.16.460711v1?rss=1&utm_source=dlvr.it&utm_medium=twitter",
+  keywords = "Cephalic furrow mechanics",
+  language = "en",
+  doi      = "10.1101/2021.09.16.460711"
+}
+
+@ARTICLE{Gramates2022-xe,
+  title     = "{FlyBase}: a guided tour of highlighted features",
+  author    = "Gramates, L Sian and Agapite, Julie and Attrill, Helen and
+               Calvi, Brian R and Crosby, Madeline A and Dos Santos, Gilberto
+               and Goodman, Joshua L and Goutte-Gattat, Damien and Jenkins,
+               Victoria K and Kaufman, Thomas and Larkin, Aoife and Matthews,
+               Beverley B and Millburn, Gillian and Strelets, Victor B and {the
+               FlyBase Consortium}",
+  abstract  = "FlyBase provides a centralized resource for the genetic and
+               genomic data of Drosophila melanogaster. As FlyBase enters our
+               fourth decade of service to the research community, we reflect
+               on our unique aspects and look forward to our continued
+               collaboration with the larger research and model organism
+               communities. In this study, we emphasize the dedicated reports
+               and tools we have constructed to meet the specialized needs of
+               fly researchers but also to facilitate use by other research
+               communities. We also highlight ways that we support the fly
+               community, including an external resources page, help resources,
+               and multiple avenues by which researchers can interact with
+               FlyBase.",
+  journal   = "Genetics",
+  publisher = "Oxford University Press (OUP)",
+  volume    =  220,
+  number    =  4,
+  pages     = "iyac035",
+  month     =  apr,
+  year      =  2022,
+  url       = "http://dx.doi.org/10.1093/genetics/iyac035",
+  keywords  = "Drosophila ; FlyBase; model organism database;Cephalic furrow
+               mechanics",
+  copyright = "https://creativecommons.org/licenses/by/4.0/",
+  language  = "en",
+  issn      = "0016-6731, 1943-2631",
+  pmid      = "35266522",
+  doi       = "10.1093/genetics/iyac035",
+  pmc       = "PMC8982030"
 }
