Move references and citation styles to resources

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -1280,7 +1280,7 @@
   year     =  2020,
   url      = "http://dx.doi.org/10.1016/j.devcel.2020.07.019",
   keywords = "3D cell culture; alginate capsules; epithelial monolayer;
-              epithelium mechanics; morphogenesis;to be read;Cephalic furrow
+              epithelium mechanics; morphogenesis;important;Cephalic furrow
               mechanics",
   language = "en",
   issn     = "1534-5807, 1878-1551",
@@ -1410,40 +1410,6 @@
   pmc      = "PMC2755076"
 }
 
-@UNPUBLISHED{Guo2021-sj,
-  title    = "Mechanical bistability enabled by ectodermal compression
-              facilitates Drosophila mesoderm invagination",
-  author   = "Guo, Hanqing and Swan, Michael and Huang, Shicheng and He, Bing",
-  abstract = "Apical constriction driven by non-muscle myosin II (``myosin'')
-              provides a well-conserved mechanism to mediate epithelial
-              folding. It remains unclear how contractile forces near the
-              apical surface of a cell sheet drive out-of-plane bending of the
-              sheet and whether myosin contractility is required throughout
-              folding. By optogenetic-mediated acute inhibition of myosin, we
-              find that during Drosophila mesoderm invagination, myosin
-              contractility is critical to prevent tissue relaxation during the
-              early, ``priming'' stage of folding but is dispensable for the
-              actual folding step after the tissue passes through a stereotyped
-              transitional configuration, suggesting that the mesoderm is
-              mechanically bistable during gastrulation. Combining computer
-              modeling and experimental measurements, we show that the observed
-              mechanical bistability arises from an in-plane compression from
-              the surrounding ectoderm, which promotes mesoderm invagination by
-              facilitating a buckling transition. Our results indicate that
-              Drosophila mesoderm invagination requires a joint action of local
-              apical constriction and global in-plane compression to trigger
-              epithelial buckling. \#\#\# Competing Interest Statement The
-              authors have declared no competing interest.",
-  journal  = "bioRxiv",
-  pages    = "2021.03.18.435928",
-  month    =  mar,
-  year     =  2021,
-  url      = "https://www.biorxiv.org/content/10.1101/2021.03.18.435928v1",
-  keywords = "to be read;Cephalic furrow;Cephalic furrow mechanics",
-  language = "en",
-  doi      = "10.1101/2021.03.18.435928"
-}
-
 @ARTICLE{Ko2020-wk,
   title    = "Apical Constriction Reversal upon Mitotic Entry Underlies
               Different Morphogenetic Outcomes of Cell Division",
@@ -1558,9 +1524,9 @@
   year     =  2021,
   url      = "http://dx.doi.org/10.1016/j.semcdb.2021.05.027",
   keywords = "Epithelial folding; Apical-basal polarity; Planar polarity;
-              Mechanical stress; Tissue strain; Curvature transition;to be
-              read;Mechano-development;Epithelial folding;Cephalic furrow
-              mechanics",
+              Mechanical stress; Tissue strain; Curvature
+              transition;important;Mechano-development;Epithelial
+              folding;Cephalic furrow mechanics",
   language = "en",
   issn     = "1084-9521, 1096-3634",
   pmid     = "34059419",
@@ -1749,7 +1715,9 @@
 @MISC{Vellutini2023-ng,
   title     = "Repository for: Pre-patterned epithelial invagination prevents
                mechanical instability during fly gastrulation",
-  author    = "Vellutini, Bruno C",
+  author    = "Vellutini, Bruno Cossermelli and Cuenca, Marina B and Krishna,
+               Abhijeet and Szałapak, Alicja and Modes, Carl D and Tomančák,
+               Pavel",
   abstract  = "This repository contains the data, scripts, and analyses for the
                manuscript: Vellutini BC, Cuenca MB, Krishna A, Szałapak A,
                Modes CD, Tomančák P. Pre-patterned epithelial invagination
@@ -1769,7 +1737,9 @@
 @MISC{Vellutini2023-hu,
   title     = "Figures and videos for: Pre-patterned epithelial invagination
                prevents mechanical instability during fly gastrulation",
-  author    = "Vellutini, Bruno C",
+  author    = "Vellutini, Bruno Cossermelli and Cuenca, Marina B and Krishna,
+               Abhijeet and Szałapak, Alicja and Modes, Carl D and Tomančák,
+               Pavel",
   abstract  = "This repository contains the high-resolution figures and videos
                for the manuscript: Vellutini BC, Cuenca MB, Krishna A, Szałapak
                A, Modes CD, Tomančák P. Pre-patterned epithelial invagination
