Add citation to CF theory repository

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -1734,28 +1734,6 @@
   doi       = "10.5281/zenodo.7781948"
 }
 
-@MISC{Vellutini2023-hu,
-  title     = "Figures and videos for: Pre-patterned epithelial invagination
-               prevents mechanical instability during fly gastrulation",
-  author    = "Vellutini, Bruno Cossermelli and Cuenca, Marina B and Krishna,
-               Abhijeet and Szałapak, Alicja and Modes, Carl D and Tomančák,
-               Pavel",
-  abstract  = "This repository contains the high-resolution figures and videos
-               for the manuscript: Vellutini BC, Cuenca MB, Krishna A, Szałapak
-               A, Modes CD, Tomančák P. Pre-patterned epithelial invagination
-               prevents mechanical instability during fly gastrulation. (in
-               prep)",
-  publisher = "Zenodo",
-  month     =  mar,
-  year      =  2023,
-  url       = "https://zenodo.org/record/7781917",
-  note      = "Title of the publication associated with this dataset:
-               Pre-patterned epithelial invagination prevents mechanical
-               instability during fly gastrulation",
-  keywords  = "Datasets;Cephalic furrow mechanics",
-  doi       = "10.5281/zenodo.7781917"
-}
-
 @ARTICLE{Legland2016-cp,
   title    = "{MorphoLibJ}: integrated library and plugins for mathematical
               morphology with {ImageJ}",
@@ -1963,6 +1941,28 @@
   copyright = "https://creativecommons.org/licenses/by/4.0/legalcode",
   issn      = "1521-9615, 1558-366X",
   doi       = "10.1109/mcse.2021.3059263"
+}
+
+@MISC{Vellutini2023-ix,
+  title     = "Figures and videos for: Pre-patterned epithelial invagination
+               prevents mechanical instability during fly gastrulation",
+  author    = "Vellutini, Bruno Cossermelli and Cuenca, Marina B and Krishna,
+               Abhijeet and Szałapak, Alicja and Modes, Carl D and Tomančák,
+               Pavel",
+  abstract  = "This repository contains the high-resolution figures and videos
+               for the manuscript: Vellutini BC, Cuenca MB, Krishna A, Szałapak
+               A, Modes CD, Tomančák P. Pre-patterned epithelial invagination
+               prevents mechanical instability during fly gastrulation. (in
+               prep)",
+  publisher = "Zenodo",
+  month     =  mar,
+  year      =  2023,
+  url       = "https://zenodo.org/record/7781917",
+  note      = "Title of the publication associated with this dataset:
+               Pre-patterned epithelial invagination prevents mechanical
+               instability during fly gastrulation",
+  keywords  = "Datasets;Cephalic furrow mechanics",
+  doi       = "10.5281/zenodo.7781917"
 }
 
 @MISC{Vellutini2022-ya,
@@ -2173,4 +2173,27 @@
   pmid      = "35266522",
   doi       = "10.1093/genetics/iyac035",
   pmc       = "PMC8982030"
+}
+
+@MISC{Krishna2023-hu,
+  title     = "Model and simulations for: Pre-patterned epithelial invagination
+               prevents mechanical instability during fly gastrulation",
+  author    = "Krishna, Abhijeet and Szałapak, Alicja and Vellutini, Bruno
+               Cossermelli and Cuenca, Marina B and Tomančák, Pavel and Modes,
+               Carl D",
+  abstract  = "This repository contains the code and simulations for the
+               manuscript: Vellutini BC, Cuenca MB, Krishna A, Szałapak A,
+               Modes CD, Tomančák P. Pre-patterned epithelial invagination
+               prevents mechanical instability during fly gastrulation. (in
+               prep) The repository is maintained at
+               https://github.com/abhijeetkrishna/cephalic-furrow-theory.",
+  publisher = "Zenodo",
+  month     =  mar,
+  year      =  2023,
+  url       = "https://zenodo.org/record/7784907",
+  note      = "Title of the publication associated with this dataset:
+               Pre-patterned epithelial invagination prevents mechanical
+               instability during fly gastrulation",
+  keywords  = "Datasets;Cephalic furrow mechanics",
+  doi       = "10.5281/zenodo.7784907"
 }
