Add missing reference to high-throughput mounting

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -390,6 +390,22 @@
   language = {en}
 }
 
+@INBOOK{Schmied2016-oq,
+  title = {Sample Preparation and Mounting of Drosophila Embryos for Multiview
+  Light Sheet Microscopy},
+  author = {Schmied, Christopher and Tomancak, Pavel},
+  editor = {Dahmann, Christian},
+  booktitle = {Drosophila: Methods and Protocols},
+  publisher = {Springer New York},
+  location = {New York, NY},
+  pages = {189--202},
+  date = {2016},
+  doi = {10.1007/978-1-4939-6371-3_10},
+  isbn = {9781493963713},
+  url = {https://doi.org/10.1007/978-1-4939-6371-3_10},
+  keywords = {Cephalic furrow mechanics}
+}
+
 @ARTICLE{Schmid2019-bm,
   title = {3Dscript: animating 3D/4D microscopy data using a
   natural-language-based syntax},
