Update citation and rendering

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -6,11 +6,13 @@
   issue = {2},
   pages = {283--302},
   date = {1992-01-24},
+  doi = {10.1016/0092-8674(92)90471-n},
   pmid = {1346368},
   issn = {0092-8674},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/1346368},
+  url = {http://dx.doi.org/10.1016/0092-8674(92)90471-n},
   keywords = {Cephalic furrow;Cephalic furrow mechanics;Hox code;Brachiopod wnt
-  landscape;important;hox}
+  landscape;important;hox},
+  language = {en}
 }
 
 @BOOK{Campos-Ortega1985-ma,
