Include new references

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -940,6 +940,21 @@
   language = {en}
 }
 
+@ARTICLE{Keller2012-ca,
+  title = {Physical Biology Returns to Morphogenesis},
+  author = {Keller, Ray},
+  journaltitle = {Science},
+  volume = {338},
+  issue = {6104},
+  pages = {201--203},
+  date = {2012},
+  eprint = {https://www.science.org/doi/pdf/10.1126/science.1230718},
+  doi = {10.1126/science.1230718},
+  issn = {0036-8075},
+  url = {https://www.science.org/doi/abs/10.1126/science.1230718},
+  keywords = {Mechano-development;Cephalic furrow mechanics}
+}
+
 @SOFTWARE{Matlab2015-nd,
   type = {software},
   title = {MATLAB},
@@ -1168,4 +1183,27 @@
   doi = {10.5281/zenodo.7781916},
   url = {https://zenodo.org/record/7781916},
   keywords = {Supporting datasets;Cephalic furrow mechanics}
+}
+
+@ARTICLE{Newman2000-oz,
+  title = {Epigenetic mechanisms of character origination},
+  author = {Newman, S A and Müller, G B},
+  journaltitle = {J. Exp. Zool.},
+  volume = {288},
+  issue = {4},
+  pages = {304--317},
+  date = {2000-12},
+  doi = {10.1002/1097-010X(20001215)288:4<304::AID-JEZ3>3.0.CO;2-G},
+  pmid = {11144279},
+  issn = {0022-104X},
+  url = {http://dx.doi.org/10.1002/1097-010X(20001215)288:4<304::AID-JEZ3>3.0.CO;2-G},
+  note = {Standard view: evolution of form is a direct consequence of evolving
+  genetic programs.Proposal: relationship between genes and form is a highly
+  derived condition, a product of evolution (not its precondition).Helps
+  explaining Cambrian explosion, origins of morphological innovation, homology,
+  rapid change of form.[how does variation arive? genetic, developmental,
+  etc]Circuitry is an attractor of morphological design.},
+  keywords = {Animals; Biological Evolution; Body Patterning; Body Patterning:
+  genetics; Evolution; Genetic; Models; Phenotype;Mechano-evolution;Cephalic
+  furrow mechanics;important}
 }
